--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -1,6 +1,8 @@
 {
   "name": "currency-functions",
   "version": "1.0.0",
+  "description": "Netlify functions for currency and crypto conversion",
+  "main": "crypto-convert.js",
   "dependencies": {
     "axios": "^1.6.0"
   }
