--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -1,21 +1,21 @@
-
-name: Build UU-status page
+name: Build UU-status CSV
 
 on:
   schedule:
     - cron: "12 4 * * 1"   # hver mandag 04:12 UTC
-  workflow_dispatch: {}     # lar deg kjøre manuelt fra Actions
+  workflow_dispatch:
 
 permissions:
-  contents: write           # trengs for å pushe endringer tilbake til repoet
+  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -25,16 +25,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4
+          pip install requests beautifulsoup4 lxml
 
-      - name: Build UU-status page
+      - name: Build UU-status CSV
         run: |
-          python scrape_uustatus.py
+          python scrape-uustatus.py  # <-- bytt til ditt faktiske filnavn
 
-      - name: Commit updated page (if changed)
+      - name: Commit updated CSV (if changed)
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add uu-status/index.html
-          git diff --staged --quiet || git commit -m "Update UU-status page"
+          git add uu-status.csv
+          git diff --staged --quiet || git commit -m "Update uu-status.csv"
           git push
