--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build UU-status CSV
         run: |
-          python scrape-uustatus.py  # <-- bytt til ditt faktiske filnavn
+          python scrape_uustatus.py  # <-- bytt til ditt faktiske filnavn
 
       - name: Commit updated CSV (if changed)
         run: |
@@ -37,4 +37,4 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add uu-status.csv
           git diff --staged --quiet || git commit -m "Update uu-status.csv"
-          git push
+          git push_
