--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -37,4 +37,4 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add uu-status.csv
           git diff --staged --quiet || git commit -m "Update uu-status.csv"
-          git push_
+          git push
