--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -1,4 +1,4 @@
-name: Build UU-status CSV
+name: Build UU-status (CSV + Page)
 
 on:
   schedule:
@@ -6,11 +6,12 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: write           # må ha write for å pushe med GITHUB_TOKEN
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
@@ -31,10 +32,15 @@ jobs:
         run: |
           python scrape_uustatus.py
 
-      - name: Commit updated CSV (if changed)
+      - name: Copy CSV to docs (for GitHub Pages)
+        run: |
+          mkdir -p docs
+          cp uu-status.csv docs/uu-status.csv
+
+      - name: Commit updated CSV and page (if changed)
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add uu-status.csv
-          git diff --staged --quiet || git commit -m "Update uu-status.csv"
+          git add uu-status.csv docs/uu-status.csv docs/uu-status.html
+          git diff --staged --quiet || git commit -m "Update UU-status (csv + page)"
           git push
