--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -1,4 +1,4 @@
-name: Build UU-status (CSV + Page)
+name: Build UU-status (CSV + Details + Page)
 
 on:
   schedule:
@@ -28,19 +28,20 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4 lxml
 
-      - name: Build UU-status CSV
+      - name: Build UU-status CSV + details
         run: |
           python scrape_uustatus.py
 
-      - name: Copy CSV to docs (for GitHub Pages)
+      - name: Copy files to docs (for GitHub Pages)
         run: |
           mkdir -p docs
           cp uu-status.csv docs/uu-status.csv
+          cp uu-status-details.json docs/uu-status-details.json
 
-      - name: Commit updated CSV and page (if changed)
+      - name: Commit updated CSV, details and page (if changed)
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add uu-status.csv docs/uu-status.csv docs/uu-status.html
-          git diff --staged --quiet || git commit -m "Update UU-status (csv + page)"
+          git add uu-status.csv uu-status-details.json docs/uu-status.csv docs/uu-status-details.json docs/uu-status.html
+          git diff --staged --quiet || git commit -m "Update UU-status (csv + details + page)"
           git push
