--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -23,11 +23,12 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
+          cache-dependency-path: "requirements.txt"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 lxml
+          pip install -r requirements.txt
 
       - name: Build UU-status CSV + details
         run: |
