--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write           # må ha write for å pushe med GITHUB_TOKEN
+  contents: write
 
 jobs:
   build:
@@ -40,7 +40,7 @@ jobs:
           cp uu-status.csv docs/uu-status.csv
           cp uu-status-details.json docs/uu-status-details.json
 
-      # NEW: Sørg for arkivmapper + tomme filer første gang
+      # Sørg for arkivmapper + tomme filer første gang
       - name: Ensure archive folders & seed files
         run: |
           mkdir -p docs/data/uustatus/snapshots
@@ -48,7 +48,7 @@ jobs:
           [ -f docs/data/uustatus/latest.json ] || echo '{ "urls": [] }' > docs/data/uustatus/latest.json
           [ -f docs/data/uustatus/logs/changes.jsonl ] || : > docs/data/uustatus/logs/changes.jsonl
 
-      # NEW: Bygg arkiv (diff mot forrige snapshot + skriv dagens snapshot)
+      # Bygg arkiv (diff mot forrige snapshot + skriv dagens snapshot)
       - name: Build archive (diff & snapshot)
         run: |
           python build_uu_archive.py
@@ -57,15 +57,18 @@ jobs:
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add \
-            uu-status.csv \
-            uu-status-details.json \
-            docs/uu-status.csv \
-            docs/uu-status-details.json \
-            docs/uu-status.html \
-            docs/uu-arkiv.html \                       # NEW
-            docs/data/uustatus/latest.json \           # NEW
-            docs/data/uustatus/logs/changes.jsonl \    # NEW
-            docs/data/uustatus/snapshots/*.json        # NEW
-          git diff --staged --quiet || git commit -m "Update UU-status + archive (csv, details, page, snapshots, changes)"
-          git push
+
+          # Legg til filer (uten linjefortsettelse og kommentarer på samme linje)
+          git add uu-status.csv uu-status-details.json
+          git add docs/uu-status.csv docs/uu-status-details.json docs/uu-status.html docs/uu-arkiv.html
+          git add docs/data/uustatus/latest.json docs/data/uustatus/logs/changes.jsonl
+
+          # snapshots kan være tom ved første kjøring – ikke feile hvis ingen matcher
+          git add docs/data/uustatus/snapshots/*.json || true
+
+          if git diff --staged --quiet; then
+            echo "No changes to commit."
+          else
+            git commit -m "Update UU-status + archive (csv, details, page, snapshots, changes)"
+            git push
+          fi
