--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -64,7 +64,7 @@ jobs:
           git add docs/data/uustatus/latest.json docs/data/uustatus/logs/changes.jsonl
 
           # snapshots kan være tom ved første kjøring – ikke feile hvis ingen matcher
-          git add docs/data/uustatus/snapshots/*.json || true
+          ggit add docs/data/uustatus/snapshots_by_updated/*.json || true
 
           if git diff --staged --quiet; then
             echo "No changes to commit."
