--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: true
+          fetch-depth: 0          # <-- viktig for pull --rebase
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -40,7 +41,6 @@ jobs:
           cp uu-status.csv docs/uu-status.csv
           cp uu-status-details.json docs/uu-status-details.json
 
-      # Sørg for arkivmapper + tomme filer første gang
       - name: Ensure archive folders & seed files
         run: |
           mkdir -p docs/data/uustatus/snapshots_by_updated
@@ -49,7 +49,6 @@ jobs:
           [ -f docs/data/uustatus/latest.json ] || echo '{ "urls": [] }' > docs/data/uustatus/latest.json
           [ -f docs/data/uustatus/logs/changes.jsonl ] || : > docs/data/uustatus/logs/changes.jsonl
 
-      # Bygg arkiv (diff mot forrige latest + skriv hendelsesbaserte snapshots)
       - name: Build archive (diff & event snapshots)
         run: |
           python build_uu_archive.py
@@ -59,17 +58,17 @@ jobs:
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          # Legg til filer
+          # Stage endringer
           git add uu-status.csv uu-status-details.json
           git add docs/uu-status.csv docs/uu-status-details.json docs/uu-status.html docs/uu-arkiv.html
           git add docs/data/uustatus/latest.json docs/data/uustatus/logs/changes.jsonl
-
-          # Hendelsesbaserte snapshots (kan være ingen første gang)
-          git add docs/data/uustatus/snapshots_by_updated/*.json || true
+          git add docs/data/uustatus/snapshots_by_updated/*.json || true   # kan være ingen
 
           if git diff --staged --quiet; then
             echo "No changes to commit."
           else
             git commit -m "Update UU-status + archive (csv, details, page, snapshots, changes)"
+            # Rebase på siste main for å unngå 'fetch first'
+            git pull --rebase
             git push
           fi
