--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -49,9 +49,13 @@ jobs:
           [ -f docs/data/uustatus/latest.json ] || echo '{ "urls": [] }' > docs/data/uustatus/latest.json
           [ -f docs/data/uustatus/logs/changes.jsonl ] || : > docs/data/uustatus/logs/changes.jsonl
 
-      - name: Build archive (diff & event snapshots)
-        run: |
-          python build_uu_archive.py   # <- denne må du oppdatere med ny kode jeg sendte
+- name: Build archive (diff & event snapshots)
+  env:
+    BASELINE_REF: "HEAD~1"   # sammenlign mot forrige commit
+    DEBUG_URL_CONTAINS: "veldedig-eller-allmennyttig"  # unik bit av URLen du endret
+  run: |
+    python build_uu_archive.py
+
 
       - name: Commit updated CSV, details and page (if changed)
         run: |
