--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -49,14 +49,12 @@ jobs:
           [ -f docs/data/uustatus/latest.json ] || echo '{ "urls": [] }' > docs/data/uustatus/latest.json
           [ -f docs/data/uustatus/logs/changes.jsonl ] || : > docs/data/uustatus/logs/changes.jsonl
 
-- name: Build archive (diff & event snapshots)
-  run: |
-    python build_uu_archive.py
-  env:
-    BASELINE_REF: "HEAD~1"   # sammenlign mot forrige commit
-    DEBUG_URL_CONTAINS: "veldedig-eller-allmennyttig"  # unik bit av URLen du endret
-
-
+      - name: Build archive (diff & event snapshots)
+        env:
+          BASELINE_REF: "HEAD~1"
+          DEBUG_URL_CONTAINS: "veldedig-eller-allmennyttig"
+        run: |
+          python build_uu_archive.py
 
       - name: Commit updated CSV, details and page (if changed)
         run: |
@@ -71,9 +69,8 @@ jobs:
 
           if git diff --staged --quiet; then
             echo "No changes to commit."
-          else
+          else:
             git commit -m "Update UU-status + archive (csv, details, page, snapshots, changes)"
             # Rebase på siste main for å unngå 'fetch first'
             git pull --rebase
             git push
-          fi
